--- a/UserManagement.UI/Layout/MainLayout.razor
+++ b/UserManagement.UI/Layout/MainLayout.razor
@@ -1,14 +1,11 @@
 ﻿@inherits LayoutComponentBase
 <div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
-
     <main>
-        <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
+        <div class="top-row top-row-left">
+            <a href="/" id="header-link">
+                <h1 style="margin: 0;">UMS</h1>
+            </a>
         </div>
-
         <article class="content px-4">
             @Body
         </article>
