--- a/UserManagement.UI/Pages/UserList.razor
+++ b/UserManagement.UI/Pages/UserList.razor
@@ -1,6 +1,10 @@
-@page "/users"
+@page "/"
+
+<PageTitle>UMS List Users</PageTitle>
+
 @using UserManagement.UI.Dtos
 @using UserManagement.UI.Services
+@using UserManagement.UI.Components
 @inject UserApiService UserService
 
 @if (users == null)
@@ -13,8 +17,7 @@ else if (!users.Any())
 }
 else
 {
-
-    <table class="table">
+    <table class="table table-hover">
         <thead>
             <tr>
                 <th>Id</th>
@@ -22,28 +25,41 @@ else
                 <th>Surname</th>
                 <th>Email</th>
                 <th>Active</th>
+                <th>Actions</th>
             </tr>
         </thead>
+
         <tbody>
             @foreach (var user in users)
             {
-                <tr>
-                    <td>@user.Id</td>
-                    <td>@user.Forename</td>
-                    <td>@user.Surname</td>
-                    <td>@user.Email</td>
-                    <td>@user.IsActive</td>
-                </tr>
+                <UserRow User="user" OnView="ShowUserModal" />
             }
         </tbody>
     </table>
 }
 
+<ViewUserForm IsVisible="isViewUserFormVisible" User="selectedUser" OnClose="CloseModal" />
+
 @code {
     private List<UserDto>? users;
+
+    private bool isViewUserFormVisible = false;
+    private UserDto? selectedUser;
 
     protected override async Task OnInitializedAsync()
     {
         users = await UserService.GetAllAsync();
+    }
+
+    private void ShowUserModal(UserDto user)
+    {
+        selectedUser = user;
+        isViewUserFormVisible = true;
+    }
+
+    private void CloseModal()
+    {
+        isViewUserFormVisible = false;
+        selectedUser = null;
     }
 }
