--- a/UserManagement.UI/Pages/UserList.razor
+++ b/UserManagement.UI/Pages/UserList.razor
@@ -7,11 +7,7 @@
 @using UserManagement.UI.Components
 @inject UserApiService UserService
 
-@if (isLoading)
-{
-    <p><em>Loading...</em></p>
-}
-else if (users == null || !users.Any())
+@if (users == null || !users.Any())
 {
     <UserSearchBar SearchTerm="@searchTerm" SearchTermChanged="@((val) => searchTerm = val)"
         SelectedActiveOption="@selectedActiveOption" SelectedActiveOptionChanged="@((val) => selectedActiveOption = val)"
@@ -45,24 +41,31 @@ else
             }
         </tbody>
     </table>
+    <UserListPaginator CurrentPage="@currentPage" TotalPages="@TotalPages" SortField="@sortBy" Descending="@sortDescending"
+        OnPageChanged="HandlePageChanged" OnSortChanged="HandleSortChanged" />
 }
 
-<ViewUserForm IsVisible="isViewUserFormVisible" User="selectedViewUser" OnClose="CloseViewModal" />
-<DeleteUserForm IsVisible="isDeleteUserFormVisible" User="selectedDeleteUser" OnClose="CloseDeleteModal"
+<ViewUserForm IsVisible="currentForm == VisibleForm.ViewUser" User="selectedViewUser" OnClose="CloseViewModal" />
+<DeleteUserForm IsVisible="currentForm == VisibleForm.DeleteUser" User="selectedDeleteUser" OnClose="CloseDeleteModal"
     OnDeleted="HandleUserDeleted" />
-<EditUserForm IsVisible="isEditUserFormVisible" User="selectedEditUser" OnClose="CloseEditModal"
+<EditUserForm IsVisible="currentForm == VisibleForm.EditUser" User="selectedEditUser" OnClose="CloseEditModal"
     OnUpdated="HandleUserUpdated" />
-<CreateUserForm IsVisible="isCreateUserFormVisible" OnClose="CloseCreateUserModal" OnCreated="HandleUserCreated" />
+<CreateUserForm IsVisible="currentForm == VisibleForm.CreateUser" OnClose="CloseCreateUserModal"
+    OnCreated="HandleUserCreated" />
 
 @code {
     private List<UserDto>? users;
 
-    private bool isLoading = true;
+    private enum VisibleForm
+    {
+        None,
+        ViewUser,
+        EditUser,
+        DeleteUser,
+        CreateUser
+    }
 
-    private bool isViewUserFormVisible;
-    private bool isDeleteUserFormVisible;
-    private bool isEditUserFormVisible;
-    private bool isCreateUserFormVisible;
+    private VisibleForm currentForm = VisibleForm.None;
 
     private UserDto? selectedViewUser;
     private UserDto? selectedDeleteUser;
@@ -72,24 +75,75 @@ else
     private string searchTerm = "";
     private string selectedActiveOption = "";
     private int currentPage = 1;
+    private int pageSize = 10;
+    private int TotalPages => totalCount > 0
+    ? (int)Math.Ceiling((double)totalCount / pageSize)
+    : 1;
     private int totalCount = 0;
     private string sortBy = "id";
     private bool sortDescending = false;
+
+    //Modal / Form display methods
+
+    private void ShowUserViewModal(UserDto user)
+    {
+        currentForm = VisibleForm.ViewUser;
+        selectedViewUser = user;
+    }
+
+    private void CloseViewModal()
+    {
+        currentForm = VisibleForm.None;
+        selectedViewUser = null;
+    }
+
+    private void ShowUserDeleteModal(UserDto user)
+    {
+        currentForm = VisibleForm.DeleteUser;
+        selectedDeleteUser = user;
+    }
+
+    private void CloseDeleteModal()
+    {
+        currentForm = VisibleForm.None;
+        selectedDeleteUser = null;
+    }
+
+    private void ShowUserEditModal(UserDto user)
+    {
+        selectedEditUser = user;
+        currentForm = VisibleForm.EditUser;
+    }
+
+    private void CloseForm()
+    {
+        currentForm = VisibleForm.None;
+    }
+
+    private void CloseEditModal()
+    {
+        CloseForm();
+        selectedEditUser = null;
+    }
+
+    private void ShowCreateUserModal()
+    {
+        currentForm = VisibleForm.CreateUser;
+    }
+
+    private void CloseCreateUserModal()
+    {
+        currentForm = VisibleForm.None;
+    }
 
     protected override async Task OnInitializedAsync()
     {
         await LoadUsers();
     }
 
-    private async Task LoadUsers()
-    {
-        isLoading = true;
-        var result = await UserService.GetUsersByQueryAsync(page: currentPage, pageSize: 10);
-        users = result.Users;
-        totalCount = result.TotalCount;
-        isLoading = false;
-    }
-
+    // SEARCH / PAGINATION / SORT GET METHODS
+    //
+    //
     private async Task HandleSearch((string? searchTerm, bool? isActive) args)
     {
         searchTerm = args.searchTerm ?? "";
@@ -99,12 +153,32 @@ else
             false => "false",
             null => ""
         };
+        currentPage = 1; //reset to first page
+        await LoadUsers();
+    }
+
+    private async Task HandlePageChanged(int newPage)
+    {
+        currentPage = newPage;
+        await LoadUsers();
+    }
+
+    private async Task HandleSortChanged((string sortBy, bool sortDesc) args)
+    {
+        sortBy = args.sortBy;
+        sortDescending = args.sortDesc;
+        currentPage = 1;
+        await LoadUsers();
+    }
+
+    private async Task LoadUsers()
+    {
 
         var result = await UserService.GetUsersByQueryAsync(
         searchTerm: searchTerm,
-        isActive: args.isActive,
+        isActive: GetIsActiveFilter(),
         page: currentPage,
-        pageSize: 10,
+        pageSize: pageSize,
         sortBy: sortBy,
         sortDescending: sortDescending
         );
@@ -112,69 +186,40 @@ else
         users = result.Users;
         totalCount = result.TotalCount;
     }
-    private void ShowUserViewModal(UserDto user)
+
+    private bool? GetIsActiveFilter()
     {
-        selectedViewUser = user;
-        isViewUserFormVisible = true;
+        return selectedActiveOption switch
+        {
+            "true" => true,
+            "false" => false,
+            _ => null
+        };
     }
 
-    private void CloseViewModal()
+    //Here we double load in the case that the user deleted is the last one on the page. This is a bit
+    //wasteful, but since it is rarer edge case I am OK with handling it this way.
+    private async Task HandleUserDeleted(UserDto deleted)
     {
-        isViewUserFormVisible = false;
-        selectedViewUser = null;
-    }
-
-    private void ShowUserDeleteModal(UserDto user)
-    {
-        selectedDeleteUser = user;
-        isDeleteUserFormVisible = true;
-    }
-
-    private void CloseDeleteModal()
-    {
-        isDeleteUserFormVisible = false;
-        selectedDeleteUser = null;
-    }
-
-    private void HandleUserDeleted(UserDto deleted)
-    {
-        users!.RemoveAll(u => u.Id == deleted.Id);
+        await LoadUsers();
+        if ((users == null || !users.Any()) && currentPage > 1)
+        {
+            currentPage--;
+        }
+        await LoadUsers();
         CloseDeleteModal();
     }
 
-    private void ShowUserEditModal(UserDto user)
-    {
-        selectedEditUser = user;
-        isEditUserFormVisible = true;
-    }
 
-    private void CloseEditModal()
+    private async Task HandleUserUpdated(UserDto updated)
     {
-        isEditUserFormVisible = false;
-        selectedEditUser = null;
-    }
-
-    private void HandleUserUpdated(UserDto updated)
-    {
-        var index = users!.FindIndex(u => u.Id == updated.Id);
-        if (index >= 0) users[index] = updated;
+        await LoadUsers();
         CloseEditModal();
     }
 
-    private void ShowCreateUserModal()
+    private async Task HandleUserCreated(UserDto newUser)
     {
-        isCreateUserFormVisible = true;
-    }
-
-    private void CloseCreateUserModal()
-    {
-        isCreateUserFormVisible = false;
-    }
-
-    private void HandleUserCreated(UserDto newUser)
-    {
-        users ??= new List<UserDto>();
-        users.Add(newUser);
+        await LoadUsers();
         CloseCreateUserModal();
     }
 }
