User has soft delete now

--- a/UserManagement.UI/Components/Forms/DeleteUserForm.razor
+++ b/UserManagement.UI/Components/Forms/DeleteUserForm.razor
@@ -49,7 +49,7 @@
 
         try
         {
-            await UserService.DeleteUserAsync(User!.Id);
+            await UserService.SoftDeleteUserAsync(User!.Id);
             await OnDeleted.InvokeAsync(User);
             await Close();
         }
