--- a/UserManagement.UI/Components/Forms/CreateUserForm.razor
+++ b/UserManagement.UI/Components/Forms/CreateUserForm.razor
@@ -55,7 +55,8 @@ these forms apply that -> But I felt the extraarchitecture was a bit unncessary 
 
                         <div class="mb-3">
                             <label class="form-label">Birth Date</label>
-                            <InputDate class="form-control" @bind-Value="NewUser.BirthDate" />
+                            <InputDate class="form-control" @bind-Value="NewUser.BirthDate"
+                                min="@MinBirthDate.ToString("yyyy-MM-dd")" max="@MaxBirthDate.ToString("yyyy-MM-dd")" />
                             <ValidationMessage For="@(() => NewUser.BirthDate)" />
                         </div>
 
@@ -77,6 +78,8 @@ these forms apply that -> But I felt the extraarchitecture was a bit unncessary 
 
     [Inject] public UserApiService UserService { get; set; } = default!;
 
+    private DateTime MinBirthDate => DateTime.Today.AddYears(-120);
+    private DateTime MaxBirthDate => DateTime.Today.AddYears(-18);
     private string ErrorMessage = "";
     private UserCreateDto NewUser = new();
 
