--- a/UserManagement.UI/Components/Forms/DeleteUserForm.razor
+++ b/UserManagement.UI/Components/Forms/DeleteUserForm.razor
@@ -33,9 +33,7 @@
     [Parameter] public UserDto? User { get; set; }
     [Parameter] public EventCallback OnClose { get; set; }
     [Parameter] public EventCallback<UserDto> OnDeleted { get; set; }
-
-    [Inject] public UserApiService UserService { get; set; } = default!;
-
+    [Inject] public IUserApiService UserService { get; set; } = default!;
     private string ErrorMessage = "";
 
     //Introducing this IsDeleting bool, so we cant accidentally multi click and encounter issues.
