--- a/UserManagement.UI/Components/Forms/EditUserForm.razor
+++ b/UserManagement.UI/Components/Forms/EditUserForm.razor
@@ -73,8 +73,7 @@
     [Parameter] public EventCallback OnClose { get; set; }
     [Parameter] public EventCallback<UserDto> OnUpdated { get; set; }
 
-    [Inject] public UserApiService UserService { get; set; } = default!;
-
+    [Inject] public IUserApiService UserService { get; set; } = default!;
     private DateTime MinBirthDate => DateTime.Today.AddYears(-120);
     private DateTime MaxBirthDate => DateTime.Today.AddYears(-18);
     private string ErrorMessage = "";
