--- a/UserManagement.UI/Components/UserSearchBar.razor
+++ b/UserManagement.UI/Components/UserSearchBar.razor
@@ -1,5 +1,6 @@
 <div class="d-flex mb-3 gap-2 align-items-center">
-    <input type="text" class="form-control w-25" placeholder="Search users..." @bind="SearchTerm" />
+    <input type="text" id="user-search-bar" class="form-control w-25" placeholder="Search users..."
+        @bind="SearchTerm" />
 
     <select class="form-select w-auto ms-3" @bind="SelectedActiveOption">
         <option value="">All</option>
