First Audit View details iteration

--- a/UserManagement.UI/Layout/MainLayout.razor
+++ b/UserManagement.UI/Layout/MainLayout.razor
@@ -1,9 +1,15 @@
 ﻿@inherits LayoutComponentBase
 <div class="page">
     <main>
-        <div class="top-row top-row-left">
+        <div class="top-row d-flex align-items-center justify-content-between px-4 py-2">
+            <div></div>
+
             <a href="/" id="header-link">
-                <h1 style="margin: 0;">UMS</h1>
+                <h1 style="margin: 0; text-align: center;">UMS</h1>
+            </a>
+
+            <a href="/audits" id="header-link">
+                <h4>Audit History</h4>
             </a>
         </div>
         <article class="content px-4">
