--- a/UserManagement.UI/Pages/Audits.razor
+++ b/UserManagement.UI/Pages/Audits.razor
@@ -1,6 +1,7 @@
 @page "/audits"
 @using UserManagement.UI.Dtos
 @using UserManagement.UI.Services
+@using UserManagement.UI.Components
 
 @inject IUserAuditApiService UserAuditService
 
@@ -20,32 +21,35 @@ else if (audits?.Any() != true)
 }
 else
 {
-    <table class="table table-striped">
+    <table class="table table-hover">
         <thead>
             <tr>
                 <th>Audit Id</th>
-                <th>User Id</th>
-                <th>Action</th>
-                <th>Timestamp</th>
+                <th>Affected User Id</th>
+                <th>Logged At</th>
+                <th>User Action</th>
+                <th>Details</th>
             </tr>
         </thead>
         <tbody>
-            @foreach (var audit in audits)
+            @foreach (var audit in audits!)
             {
-                <tr>
-                    <td>@audit.Id</td>
-                    <td>@audit.UserId</td>
-                    <td>@audit.Action</td>
-                    <td>@audit.LoggedAt.ToString("g")</td>
-                </tr>
+                <UserAuditRow AuditDto="audit" OnViewAudit="ShowAuditModal" />
             }
         </tbody>
     </table>
+
+
 }
+<ViewAuditForm IsVisible="ShowAuditView" Audit="SelectedAuditDto" OnCloseAudit="CloseAuditModal" />
+
 
 @code {
     private List<UserAuditDto> audits = new();
+    private UserAuditDto? SelectedAuditDto;
+
     private bool loading = true;
+    private bool ShowAuditView = false;
     private string? errorMessage;
 
     protected override async Task OnInitializedAsync()
@@ -67,4 +71,18 @@ else
             loading = false;
         }
     }
+
+    private void ShowAuditModal(UserAuditDto auditDto)
+    {
+        SelectedAuditDto = auditDto;
+        ShowAuditView = true;
+    }
+
+    private void CloseAuditModal()
+    {
+        ShowAuditView = false;
+        SelectedAuditDto = null;
+
+    }
+
 }
